[gd_scene load_steps=7 format=3 uid="uid://dtv16ej3hv1nr"]

[ext_resource type="Script" path="res://scripts/cards/card.gd" id="1_6ytjm"]
[ext_resource type="Texture2D" uid="uid://d20ap51dd0joh" path="res://assets/cards/card_placeholder.png" id="2_65382"]

[sub_resource type="Animation" id="Animation_2jtch"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(80, 150)]
}

[sub_resource type="Animation" id="Animation_ipa27"]
resource_name = "deselect"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(80, 120), Vector2(80, 150)]
}

[sub_resource type="Animation" id="Animation_321ma"]
resource_name = "select"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(80, 150), Vector2(80, 120)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ge4wr"]
_data = {
"RESET": SubResource("Animation_2jtch"),
"deselect": SubResource("Animation_ipa27"),
"select": SubResource("Animation_321ma")
}

[node name="Card" type="Container"]
custom_minimum_size = Vector2(160, 300)
offset_right = 160.0
offset_bottom = 300.0
size_flags_horizontal = 8
size_flags_vertical = 8
mouse_default_cursor_shape = 2
script = ExtResource("1_6ytjm")

[node name="Anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ge4wr")
}

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(80, 150)
texture = ExtResource("2_65382")

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
